<resources>
    <string name="app_name">BookWorm</string>
    <string name="profile_image">Profile Image</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="save_profile" />
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="update">Update</string>
    <string name="userEmail">john.doe@gmail.com</string>
    <!-- Strings related to upload book -->
    <string name="book_name_label">Book Name:</string>
    <string name="book_name_edit_text_hint">Enter the book title</string>
    <string name="recommendation_label">Recommendation:</string>
    <string name="recommendation_edit_text_hint">Enter book recommendation</string>
    <string name="rating_label">Rating</string>
    <string name="submit_book_btn_text">Add recommendation</string>
    <string name="choose_photo_btn_text">Choose Photo</string>
    <string name="book_image_content_desc">Book Image</string>

    <string name="feed_title">Feed</string>
    <string name="cancel">Cancel</string>
    <string name="edit_user">Edit User</string>
    <string name="log_out">Log Out</string>
    <string name="userName">John Doe</string>
    <string name="SaveChanges">Save Changes</string>
    <string name="return_button">go back</string>
    <string name="rateBookLabel">Click to rate:</string>
    <string name="my_list_title">My book posts:</string>
    <string name="empty_recommendation_list_message">Your book list is empty. Start building your recommendations by adding your first book through the \'Add Book\' feature.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_recommendation">Update Recommendation</string>
    <string name="feed">Feed</string>
    <string name="add_book">Add Book</string>
    <string name="my_list">My List</string>
    <string name="settings">Settings</string>


</resources>