<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feedFragment"
        android:name="com.example.bookworm.ui.feed.FeedFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/feed" />
    <item
        android:id="@+id/addBookRecommendationFragment"
        android:name="com.example.bookworm.ui.books.AddBookRecommendationFragment"
        android:icon="@drawable/ic_add"
        android:title="@string/add_book" />
    <item
        android:id="@+id/myListFragment"
        android:name="com.example.bookworm.ui.books.MyListFragment"
        android:icon="@drawable/ic_my_posts"
        android:title="@string/my_list" />
    <item
        android:id="@+id/settingsFragment"
        android:name="com.example.bookworm.ui.settings.SettingsFragment"
        android:icon="@drawable/default_avatar"
        android:title="@string/settings" />
</menu>
