<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:contentDescription="@string/profile_image"
        android:focusable="true"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/FullNameEditText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/PhoneEditText"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/button" />

</LinearLayout>