<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@android:color/holo_blue_dark"
        android:gravity="center"
        android:paddingTop="16dp" />
</LinearLayout>
