<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.books.AddBookRecommendationFragment">

    <LinearLayout
        android:id="@+id/scrollView"
        style="@style/LayoutCustomStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="240dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/imageViewBook"
                style="@style/BookImage"
                android:clickable="true"
                android:contentDescription="@string/book_image_content_desc" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/bookNameLabel"
            style="@style/GeneralTextViewStyle"
            android:text="@string/book_name_label" />

        <AutoCompleteTextView
            android:id="@+id/bookNameInput"
            style="@style/GeneralTextViewStyle"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="bookName"
            android:hint="@string/book_name_edit_text_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/descriptionLabel"
            style="@style/GeneralTextViewStyle"
            android:text="@string/recommendation_label" />

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="250dp"
            android:layout_height="130dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="bookDescription"
            android:hint="@string/recommendation_edit_text_hint"
            android:inputType="textMultiLine"
            android:padding="8dp" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/GeneralRatingBarStyle" />

        <Button
            android:id="@+id/buttonSubmitBook"
            style="@style/GeneralButtonStyle"
            android:text="@string/submit_book_btn_text" />

        <ProgressBar
            android:id="@+id/uploadProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
