<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.auth.RegisterFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:padding="5dp"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:padding="10dp" />

    <Button
        android:id="@+id/navigateToLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/holo_blue_dark" />


</LinearLayout>
