<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    style="@style/DimensionsStyle"
    android:layout_marginStart="@dimen/fragment_horizontal_margin"
    android:layout_marginEnd="@dimen/fragment_horizontal_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="240dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/imageViewBook"
            android:clickable="true"
            android:contentDescription="@string/book_image_content_desc"
            style="@style/BookImage" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/bookNameLabel"
        android:text="@string/book_name_label"
        style="@style/GeneralTextViewStyle" />

    <AutoCompleteTextView
        android:id="@+id/bookNameInput"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="bookName"
        android:hint="@string/book_name_edit_text_hint"
        android:inputType="text"
        style="@style/GeneralTextViewStyle"/>

    <TextView
        android:id="@+id/descriptionLabel"
        android:text="@string/recommendation_label"
        style="@style/GeneralTextViewStyle"/>


    <EditText
        android:id="@+id/descriptionInput"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="bookDescription"
        android:hint="@string/recommendation_edit_text_hint"
        android:inputType="textMultiLine"
        android:padding="8dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/GeneralRatingBarStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/buttonSubmitBook"
            android:text="Update Recommendation"
            style="@style/GeneralButtonStyle"/>

        <Button
            android:id="@+id/buttonCancel"
            android:text="Cancel"
            style="@style/CancelButtonStyle"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</LinearLayout>
